--- a/src/pages/upload-pictures/upload-pictures.html
+++ b/src/pages/upload-pictures/upload-pictures.html
@@ -1,18 +1,15 @@
-<!--
-  Generated template for the UploadPicturesPage page.
+<ion-card>
+  <img [src]="base64Image"/>
+  <ion-card-content>
+    <ion-list no-lines>
+      <ion-list-header>Labels</ion-list-header>
+      <p>{{ res | json}}</p>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>UploadPictures</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+    </ion-list>
+  </ion-card-content>
+</ion-card>
+<ion-fab bottom right>
+  <button ion-fab (click)="takePhoto()">
+    <ion-icon name="camera"></ion-icon>
+  </button>
+</ion-fab>
