--- a/src/pages/new-user/new-user.html
+++ b/src/pages/new-user/new-user.html
@@ -1,91 +1,54 @@
-<!--
-  Generated template for the NewUserPage page.
+<!-- -->
+<ion-content class="auth-page">
+  <div class="login-content">
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>Register New User</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-<ion-content padding>
-
-  <ion-slides [pager]="true">
-  <ion-slide>
-    <div class="jumbotron">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <h3>Angular 6 Template-Driven Form Validation</h3>
-                <form name="form" (ngSubmit)="f.form.valid && signUp()" #f="ngForm" novalidate>
-                    <div class="form-group">
-                        <label for="firstName">First Name</label>
-                        <input [(ngModel)]="data.firstName" type="text" class="form-control" name="firstName" [(ngModel)]="model.firstName" #firstName="ngModel" [ngClass]="{ 'is-invalid': f.submitted && firstName.invalid }" required />
-                        <div *ngIf="f.submitted && firstName.invalid" class="invalid-feedback">
-                            <div *ngIf="firstName.errors.required">First Name is required</div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="lastName">Last Name</label>
-                        <input [(ngModel)]="data.lastName" type="text" class="form-control" name="lastName" [(ngModel)]="model.lastName" #lastName="ngModel" [ngClass]="{ 'is-invalid': f.submitted && lastName.invalid }" required />
-                        <div *ngIf="f.submitted && lastName.invalid" class="invalid-feedback">
-                            <div *ngIf="lastName.errors.required">Last Name is required</div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input [(ngModel)]="data.email" type="text" class="form-control" name="email" [(ngModel)]="model.email" #email="ngModel" [ngClass]="{ 'is-invalid': f.submitted && email.invalid }" required email />
-                        <div *ngIf="f.submitted && email.invalid" class="invalid-feedback">
-                            <div *ngIf="email.errors.required">Email is required</div>
-                            <div *ngIf="email.errors.email">Email must be a valid email address</div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input [(ngModel)]="data.password" type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" [ngClass]="{ 'is-invalid': f.submitted && password.invalid }" required minlength="6" />
-                        <div *ngIf="f.submitted && password.invalid" class="invalid-feedback">
-                            <div *ngIf="password.errors.required">Password is required</div>
-                            <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <button ion-button blcok class="btn btn-primary">Next</button>
-                    </div>
-                </form>
-            </div>
-        </div>
+    <!-- Logo -->
+    <div padding text-center>
+      <div class="logo"></div>
+      <h2 ion-text class="text-primary">
+        <strong>Registration</strong>
+      </h2>
     </div>
-</div>
 
-  </ion-slide>
-  <ion-slide>
-    <button ion-button (click)="presentActionSheet()">Upload Photo</button>
-  </ion-slide>
-  <ion-slide>
+    <!-- Login form -->
+    <form class="list-form">
+      <ion-item>
+        <ion-label floating>
+          <ion-icon name="person" item-start class="text-primary"></ion-icon>
+          Full Name
+        </ion-label>
+        <ion-input [(ngModel)]="data.name" name="fullName"  type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>
+          <ion-icon name="mail" item-start class="text-primary"></ion-icon>
+          Email
+        </ion-label>
+        <ion-input [(ngModel)]="data.email"  name="email" type="email"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>
+          <ion-icon name="lock" item-start class="text-primary"></ion-icon>
+          Password
+        </ion-label>
+        <ion-input  [(ngModel)]="data.password" name="password" type="password"></ion-input>
+      </ion-item>
+    </form>
+
+    <div margin-top>
+      <button ion-button block color="dark" tappable (click)="signUp()">
+        SIGN UP
+      </button>
 
 
-  <ion-card>
-    <img [src]="base64Image"/>
-    <ion-card-content>
-      <ion-list no-lines>
-        <ion-list-header>Labels</ion-list-header>
-        <p>{{ res | json}}</p>
+    </div>
 
-      </ion-list>
-    </ion-card-content>
-  </ion-card>
-  <ion-fab bottom right>
-    <button ion-fab (click)="takePhoto()">
-      <ion-icon name="camera"></ion-icon>
-    </button>
-  </ion-fab>
+    <!-- Other links -->
+    <div text-center margin-top>
+      <span ion-text color="primary" tappable (click)="login()">I have an account</span>
+    </div>
 
-  </ion-slide>
-</ion-slides>
-
-
+  </div>
 </ion-content>
