--- a/src/pages/upload-pictures/upload-pictures.html
+++ b/src/pages/upload-pictures/upload-pictures.html
@@ -1,9 +1,8 @@
 <ion-card>
-  <img [src]="base64Image"/>
   <ion-card-content>
     <ion-list no-lines>
       <ion-list-header>Labels</ion-list-header>
-      <p>{{ res | json}}</p>
+      <progress-bar *ngIf="loadProgress" [progress]="loadProgress"></progress-bar>
 
     </ion-list>
   </ion-card-content>
