--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -11,40 +11,16 @@
     </div>
 
     <!-- Login form -->
-    <form class="list-form">
-      <ion-item>
-        <ion-label floating>
-          <ion-icon name="mail" item-start class="text-primary"></ion-icon>
-          Email
-        </ion-label>
-        <ion-input [(ngModel)]="email" type="email" name="email"></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label floating>
-          <ion-icon name="lock" item-start class="text-primary"></ion-icon>
-          Password
-        </ion-label>
-        <ion-input [(ngModel)]="password" type="password" name="password"></ion-input>
-      </ion-item>
-    </form>
-
-    <p text-right ion-text color="secondary" tappable (click)="forgotPass()"><strong>Forgot Password?</strong></p>
 
     <div>
-      <button ion-button icon-start block color="dark" tappable (click)="Login()">
+      <button ion-button icon-start block color="dark" tappable (click)="register()">
         <ion-icon name="log-in"></ion-icon>
-        SIGN IN
+        Register
       </button>
 
 
     </div>
 
-
-    <!-- Other links -->
-    <div text-center margin-top>
-      <span ion-text color="secondary" tappable (click)="registerPage()">New here? <strong>Sign up</strong></span>
-    </div>
 
   </div>
 </ion-content>
